Add  network rewards endpoint
