# docs/swagger.json
@@ -191,6 +191,7 @@
         },
         "/rewards/by-address": {
             "post": {
+                "description": "Looks up validators funded by withdrawal or deposit address and returns the summed rewards for those validators.//",
                 "consumes": [
                     "application/json"
                 ],
@@ -200,6 +201,7 @@
                 "tags": [
                     "Rewards"
                 ],
+                "summary": "Get aggregated validator rewards (EL+CL) per withdrawal or deposit address.",
                 "parameters": [
                     {
                         "description": "Addresses request",
@@ -235,6 +237,27 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/rewards/network": {
+            "get": {
+                "description": "Uses cached consensus/execution rewards to calculate global CL/EL totals and a daily APR estimate.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Rewards"
+                ],
+                "summary": "Get total validator rewards for the latest 24h window",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     }
                 }
